<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="action_settings">Settings</string>

    <string name="yes_button">YES</string>
    <string name="no_button">NO</string>
    <string name="prev_button">PREV</string>
    <string name="next_button">NEXT</string>

    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect :(</string>

    <string name="judgment_toast">Cheating is wrong</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="back_button">Back</string>

    <string name="question_1">Constantinople is the largest city in Turkey.</string>
    <string name="question_2">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_3">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_4">The Amazon River is the longest river in the Americas.</string>
    <string name="question_5">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="title_activity_cheat">CheatActivity</string>
</resources>
